# src/modules/graduation_students/DTO/ICreateGraduation_studentDTO.ts
@@ -1,0 +1,10 @@
+interface ICreateGraduation_studentDTO {
+  id_graduation_student: string;
+  id_student: string;
+  id_graduation: string;
+  id_dojo: string;
+  updatedAt?: Date;
+  created_at?: Date;
+}
+
+export { ICreateGraduation_studentDTO };
