# src/modules/graduation_students/models/Graduation_student.ts
@@ -1,0 +1,10 @@
+class Graduation_student {
+  id_graduation_student: string | undefined;
+  id_student: string | undefined;
+  id_graduation: string | undefined;
+  id_dojo: string | undefined;
+  updatedAt?: Date;
+  created_at?: Date;
+}
+
+export { Graduation_student };
